// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined css-nethg8-MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-disableElevation css-18hramg-MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-disableElevation css-1gfjs8f-MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-disableElevation css-1gfjs8f-MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-disableElevation css-18hramg-MuiButtonGroup-root"
    role="group"
  />
</div>
`;
